[gd_scene load_steps=39 format=3 uid="uid://dqnm2oy5om07y"]

[ext_resource type="Material" uid="uid://ba5iai8aflabo" path="res://materials/concrete.tres" id="1_c0tra"]
[ext_resource type="Texture2D" uid="uid://g22ekrp3nhwd" path="res://textures/room_wall.jpg" id="2_a6n1w"]
[ext_resource type="Texture2D" uid="uid://nhyf6h1bivgf" path="res://textures/room_sun.png" id="3_1uy6s"]
[ext_resource type="Material" uid="uid://djfbxo2o15cpl" path="res://materials/wood.tres" id="4_h3als"]
[ext_resource type="Texture2D" uid="uid://beewy8x5foqn5" path="res://textures/floor_green.jpg" id="5_wgbxr"]
[ext_resource type="Texture2D" uid="uid://bjxi8rnvegfu5" path="res://textures/floor_green_normal.jpg" id="6_m5x37"]
[ext_resource type="PackedScene" uid="uid://0qi1kd5bp1j3" path="res://models/door.tscn" id="7_wpeiv"]
[ext_resource type="Material" uid="uid://051nxwdgvdi" path="res://materials/light.tres" id="8_1on2g"]
[ext_resource type="Material" uid="uid://p2grbbqb4mej" path="res://materials/glass.tres" id="9_r6n4t"]
[ext_resource type="PackedScene" uid="uid://2cw0eqf1uj4j" path="res://models/chaise.tscn" id="10_usoqv"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="11_yptku"]
[ext_resource type="Material" uid="uid://kwc30h1o1u7" path="res://materials/outlineShader.tres" id="12_d8p7c"]
[ext_resource type="Shader" path="res://shaders/chromatic_aberration.gdshader" id="13_cpy22"]
[ext_resource type="Shader" path="res://shaders/glitch.gdshader" id="13_mbmt2"]
[ext_resource type="Theme" uid="uid://cidybjfkfi0pc" path="res://UI/UI_theme.tres" id="14_4tsrk"]
[ext_resource type="AudioStream" uid="uid://dsty5h6exrvs1" path="res://SFX/SFX_glitch_tuto.mp3" id="14_d5v07"]
[ext_resource type="Script" path="res://scripts/menus.gd" id="14_eupjc"]
[ext_resource type="AudioStream" uid="uid://bawya04iidwal" path="res://SFX/SFX_lights.mp3" id="18_brjgb"]

[sub_resource type="Environment" id="Environment_oca8m"]
ambient_light_source = 2
ambient_light_color = Color(0.12549, 0.12549, 0.12549, 1)
glow_enabled = true
glow_hdr_threshold = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_85ln0"]
albedo_texture = ExtResource("2_a6n1w")
uv1_scale = Vector3(0.125, 0.125, 0.125)
uv1_offset = Vector3(0, 0.625, 0)
uv1_triplanar = true
uv1_world_triplanar = true
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_3gv7p"]
flip_faces = true
size = Vector2(12, 18)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0cvll"]
albedo_texture = ExtResource("5_wgbxr")
normal_enabled = true
normal_texture = ExtResource("6_m5x37")
uv1_triplanar = true
uv1_world_triplanar = true
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_0qvlw"]
size = Vector2(18, 12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kesnq"]
albedo_color = Color(0.192157, 0.521569, 0.85098, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_aaqj6"]
material = ExtResource("8_1on2g")
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pf41h"]
albedo_color = Color(1, 0, 0, 1)
roughness = 0.1
rim_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_acasx"]
material = ExtResource("9_r6n4t")
size = Vector3(0.2, 4, 6)

[sub_resource type="SphereShape3D" id="SphereShape3D_o0eoa"]
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g5tca"]
albedo_color = Color(1, 0.533333, 0, 1)
roughness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_v67nf"]
material = SubResource("StandardMaterial3D_g5tca")
radius = 0.25
height = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_ixjes"]
material = ExtResource("12_d8p7c")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nncaq"]
shader = ExtResource("11_yptku")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6ms33"]
shader = ExtResource("13_cpy22")
shader_parameter/r_displacement = Vector2(1, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifxbp"]
shader = ExtResource("13_mbmt2")
shader_parameter/shake_power = 0.05
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="Animation" id="Animation_xu3fa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("glitch_effect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8ek5v"]
resource_name = "button"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("glitch_effect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kd8cg"]
_data = {
"RESET": SubResource("Animation_xu3fa"),
"button": SubResource("Animation_8ek5v")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtgev"]

[node name="menu_main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oca8m")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 3, -13.5)
stream = ExtResource("18_brjgb")
volume_db = -5.0
autoplay = true
bus = &"Sound"

[node name="Environment" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Environment"]
use_collision = true
collision_layer = 2
collision_mask = 15

[node name="CSGBox3D33" type="CSGBox3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, -13)
flip_faces = true
size = Vector3(6, 4, 4)
material = ExtResource("1_c0tra")

[node name="CSGBox3D13" type="CSGBox3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, -1, -13)
flip_faces = true
size = Vector3(12, 8, 18)
material = SubResource("StandardMaterial3D_85ln0")

[node name="Sprite3D" type="Sprite3D" parent="Environment/CSGCombiner3D/CSGBox3D13"]
transform = Transform3D(2, -8.74228e-08, -3.82137e-15, 0, -8.74228e-08, 2, -8.74228e-08, -2, -8.74228e-08, -0.5, 3.95, -2.5)
shaded = true
texture_filter = 0
texture = ExtResource("3_1uy6s")

[node name="CSGBox3D14" type="CSGBox3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, -2.5, -10)
operation = 2
flip_faces = true
size = Vector3(6, 5, 6)
material = ExtResource("4_h3als")

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/CSGCombiner3D/CSGBox3D14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
operation = 2
flip_faces = true
size = Vector3(4, 4, 4)
material = ExtResource("4_h3als")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/CSGCombiner3D/CSGBox3D14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -2.5)
operation = 2
flip_faces = true
size = Vector3(2, 3, 1)
material = ExtResource("4_h3als")

[node name="CSGBox3D15" type="CSGBox3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, -2.5, -16)
operation = 2
flip_faces = true
size = Vector3(6, 5, 6)
material = ExtResource("4_h3als")

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/CSGCombiner3D/CSGBox3D15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
operation = 2
flip_faces = true
size = Vector3(4, 4, 4)
material = ExtResource("4_h3als")

[node name="CSGBox3D2" type="CSGBox3D" parent="Environment/CSGCombiner3D/CSGBox3D15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -2.5)
operation = 2
flip_faces = true
size = Vector3(2, 3, 1)
material = ExtResource("4_h3als")

[node name="CSGMeshSOL" type="CSGMesh3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, -5, -13)
flip_faces = true
mesh = SubResource("PlaneMesh_3gv7p")
material = SubResource("StandardMaterial3D_0cvll")

[node name="CSGMeshPLAFOND" type="CSGMesh3D" parent="Environment/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -13)
flip_faces = true
mesh = SubResource("PlaneMesh_0qvlw")
material = SubResource("StandardMaterial3D_kesnq")

[node name="door" parent="Environment" instance=ExtResource("7_wpeiv")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 1, -3, -19)

[node name="light" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(-2.18557e-07, 0, -1, 0, 1, 0, 1, 0, -2.18557e-07, 0.539998, 3, -13.5)
mesh = SubResource("CylinderMesh_aaqj6")
skeleton = NodePath("../../..")

[node name="SpotLight3D2" type="SpotLight3D" parent="Environment/light"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
layers = 3
light_energy = 16.0
light_volumetric_fog_energy = 5.0
light_size = 1.0
shadow_enabled = true
spot_range = 12.0
spot_angle = 66.1264

[node name="CSGTorus3D" type="CSGTorus3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -7.61314)
use_collision = true
collision_layer = 2
collision_mask = 15
outer_radius = 0.6
sides = 12
material = SubResource("StandardMaterial3D_pf41h")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -13)
mesh = SubResource("BoxMesh_acasx")
skeleton = NodePath("../..")

[node name="chaise2" parent="Environment" instance=ExtResource("10_usoqv")]
transform = Transform3D(-0.322066, 0, -0.0719255, 0, 0.066, 0, 0.0719255, 0, -0.322066, 8.94823, -1.48808, -13.2002)

[node name="RigidBody3D" type="RigidBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -4.7, -12)
collision_layer = 8
collision_mask = 15

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Environment/RigidBody3D"]
shape = SubResource("SphereShape3D_o0eoa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/RigidBody3D"]
mesh = SubResource("SphereMesh_v67nf")
skeleton = NodePath("../../..")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.707107, -0.241845, -0.664463, 0, 0.939693, -0.34202, 0.707107, -0.241845, -0.664463, -4.9, -4.675, -18.84)

[node name="Shader" type="MeshInstance3D" parent="Camera"]
mesh = SubResource("QuadMesh_ixjes")

[node name="vignette" type="ColorRect" parent="Camera"]
material = SubResource("ShaderMaterial_nncaq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="Camera"]
rect = Rect2(0, 0, 1920, 1080)

[node name="chromatic_ab" type="ColorRect" parent="Camera"]
material = SubResource("ShaderMaterial_6ms33")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy2" type="BackBufferCopy" parent="Camera"]
rect = Rect2(0, 0, 1920, 1080)

[node name="glitch_effect" type="ColorRect" parent="Camera"]
visible = false
material = SubResource("ShaderMaterial_ifxbp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="glitch_animation" type="AnimationPlayer" parent="Camera"]
libraries = {
"": SubResource("AnimationLibrary_kd8cg")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Camera"]
stream = ExtResource("14_d5v07")
volume_db = -3.0
pitch_scale = 2.5
bus = &"Sound"

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="menus" type="Control" parent="Camera/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_eupjc")

[node name="titre2" type="Label" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
offset_left = -4.0
offset_top = 108.0
offset_right = 1916.0
offset_bottom = 432.0
theme = ExtResource("14_4tsrk")
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxEmpty_xtgev")
text = "RESIZE MATTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="titre3" type="Label" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
offset_left = 4.0
offset_top = 108.0
offset_right = 1924.0
offset_bottom = 432.0
theme = ExtResource("14_4tsrk")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxEmpty_xtgev")
text = "RESIZE MATTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="titre" type="Label" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
offset_top = 108.0
offset_right = 1920.0
offset_bottom = 432.0
theme = ExtResource("14_4tsrk")
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxEmpty_xtgev")
text = "RESIZE MATTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="main" type="PanelContainer" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = -434.0
offset_right = 516.0
offset_bottom = -108.0
grow_vertical = 0
theme = ExtResource("14_4tsrk")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/menus/main"]
layout_mode = 2
alignment = 1

[node name="startButton" type="Button" parent="Camera/CanvasLayer/menus/main/VBoxContainer"]
layout_mode = 2
text = "Start_"
alignment = 0

[node name="settingButton" type="Button" parent="Camera/CanvasLayer/menus/main/VBoxContainer"]
layout_mode = 2
text = "Settings_"
alignment = 0

[node name="quitButton" type="Button" parent="Camera/CanvasLayer/menus/main/VBoxContainer"]
layout_mode = 2
text = "Quit_"
alignment = 0

[node name="back" type="PanelContainer" parent="Camera/CanvasLayer/menus"]
visible = false
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = -216.0
offset_right = 516.0
offset_bottom = -108.0
grow_vertical = 0
theme = ExtResource("14_4tsrk")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/menus/back"]
layout_mode = 2
alignment = 1

[node name="backButton" type="Button" parent="Camera/CanvasLayer/menus/back/VBoxContainer"]
layout_mode = 2
text = "Back_"
alignment = 0

[node name="levels" type="PanelContainer" parent="Camera/CanvasLayer/menus"]
visible = false
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 645.0
offset_top = -540.0
offset_right = 1161.0
offset_bottom = -104.0
grow_vertical = 0
theme = ExtResource("14_4tsrk")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/menus/levels"]
layout_mode = 2
alignment = 1

[node name="level1" type="Button" parent="Camera/CanvasLayer/menus/levels/VBoxContainer"]
layout_mode = 2
text = "The research center_"
alignment = 0

[node name="level2" type="Button" parent="Camera/CanvasLayer/menus/levels/VBoxContainer"]
layout_mode = 2
text = "The fractured lab_"
alignment = 0

[node name="level3" type="Button" parent="Camera/CanvasLayer/menus/levels/VBoxContainer"]
layout_mode = 2
text = "The office_"
alignment = 0

[node name="level4" type="Button" parent="Camera/CanvasLayer/menus/levels/VBoxContainer"]
layout_mode = 2
text = "The reception_"
alignment = 0

[node name="settings_label" type="PanelContainer" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 645.0
offset_top = -328.0
offset_right = 1032.0
offset_bottom = -106.0
grow_vertical = 0
theme = ExtResource("14_4tsrk")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/menus/settings_label"]
layout_mode = 2
alignment = 1

[node name="fullscreen" type="Label" parent="Camera/CanvasLayer/menus/settings_label/VBoxContainer"]
layout_mode = 2
text = "Display_"
vertical_alignment = 1

[node name="audio" type="Label" parent="Camera/CanvasLayer/menus/settings_label/VBoxContainer"]
layout_mode = 2
text = "Audio volume_"
vertical_alignment = 1

[node name="settings" type="PanelContainer" parent="Camera/CanvasLayer/menus"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1161.0
offset_top = -326.0
offset_right = 1806.0
offset_bottom = -106.0
grow_vertical = 0
theme = ExtResource("14_4tsrk")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/CanvasLayer/menus/settings"]
layout_mode = 2
alignment = 1

[node name="display" type="OptionButton" parent="Camera/CanvasLayer/menus/settings/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen_"
popup/item_0/id = 0
popup/item_1/text = "Windowed_"
popup/item_1/id = 1

[node name="audio" type="HSlider" parent="Camera/CanvasLayer/menus/settings/VBoxContainer"]
layout_mode = 2
min_value = -50.0
max_value = 0.0

[connection signal="pressed" from="Camera/CanvasLayer/menus/main/VBoxContainer/startButton" to="Camera/CanvasLayer/menus" method="_on_start_button_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/main/VBoxContainer/settingButton" to="Camera/CanvasLayer/menus" method="_on_setting_button_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/main/VBoxContainer/quitButton" to="Camera/CanvasLayer/menus" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/back/VBoxContainer/backButton" to="Camera/CanvasLayer/menus" method="_on_back_button_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/levels/VBoxContainer/level1" to="Camera/CanvasLayer/menus" method="_on_level_1_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/levels/VBoxContainer/level2" to="Camera/CanvasLayer/menus" method="_on_level_2_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/levels/VBoxContainer/level3" to="Camera/CanvasLayer/menus" method="_on_level_3_pressed"]
[connection signal="pressed" from="Camera/CanvasLayer/menus/levels/VBoxContainer/level4" to="Camera/CanvasLayer/menus" method="_on_level_4_pressed"]
[connection signal="item_selected" from="Camera/CanvasLayer/menus/settings/VBoxContainer/display" to="Camera/CanvasLayer/menus" method="_on_display_item_selected"]
[connection signal="value_changed" from="Camera/CanvasLayer/menus/settings/VBoxContainer/audio" to="Camera/CanvasLayer/menus" method="_on_audio_value_changed"]
